# robotframework_pywinauto

./: CHANGES.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  TESTING.rst  VERSION.rst  debug_keywords.py  log.html  output.xml  pyproject.toml  report.html  requirements.txt  setup.py  test_basic.py  test_find_notepad.py  test_keywords.py  test_notepad_connection.py  test_pywinauto.py  test_run_keyword.py
.trae/documents/: plan_20251219_013439.md  修复robotframework_pywinauto项目中的错误.md  开发robotframework_pywinauto库.md
atest/acceptance/keywords/: application.robot
examples/: calculator.robot
src/pywinautoLibrary/: __init__.py  errors.py
src/pywinautoLibrary/base/: __init__.py  context.py  librarycomponent.py
src/pywinautoLibrary/keywords/: __init__.py  applicationcache.py  applicationmanagement.py  controlelement.py  keyboard.py  mouse.py  screenshot.py  waiting.py  windowmanagement.py
src/pywinautoLibrary/locators/: __init__.py  elementfinder.py
src/pywinautoLibrary/utils/: __init__.py  dynamiccore.py  librarylistener.py
src/robotframework_pywinauto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
